<resources>
    <string name="app_name">素笺</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="home">主页</string>
    <string name="pic">图片</string>
    <string name="music">音乐</string>
    <string name="projectinteoduction">本项目使用知识点：\n\n Mvp\n Rxjava \n RxBus \n Glide \n ButterKnife \n Retrofit2\n MaterailDesign \n Gson \n RxSharedPreference \n XRecyclerView \n 夜间模式</string>
    <string name="sujian">素笺</string>
    <string name="news">新闻</string>
    <string name="video">视频</string>
    <string name="technology">科技</string>
    <string name="international">国际</string>
    <string name="sports">体育</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
